Modular optimized apriori (#244)
* Optimized APrioriLinear heavily, runtimes now much faster.

* Removed deprecated APriori implementation, all functionality already present in APrioriLinear.